Sorted out image alignment by adding classes alignright etc to main.css cleanblog issues are js issues. removed link from footer.php TODO Fix navbar adresses in main site header (make use of <base> as in blog header) Resolve cleanblog issues (maybe drop it entirely). consider starting sidebar content lower on screen. Is it possible to have sidebar content float vertically ?

--- a/public_html/blog/wp-content/themes/m41/css/bootstrap.css
+++ b/public_html/blog/wp-content/themes/m41/css/bootstrap.css
@@ -6085,17 +6085,14 @@ button.close {
 .modal-footer:after {
   clear: both;
 }
-.aligncenter
 .center-block {
   display: block;
   margin-right: auto;
   margin-left: auto;
 }
-.alignright
 .pull-right {
   float: right !important;
 }
-.alignleft,
 .pull-left {
   float: left !important;
 }
