--- a/public_html/blog/wp-content/themes/m41/css/main.css
+++ b/public_html/blog/wp-content/themes/m41/css/main.css
@@ -4,19 +4,17 @@
    Author's custom styles
    ========================================================================== */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/*
+Copy pull-right, pull-left, etc from bootstrap.css to pick up WP assigned classes
+*/
+.aligncenter {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+.alignright {
+  float: right !important;
+}
+.alignleft {
+  float: left !important;
+}
